<resources>
    <string name="app_name">Baking App by Jonathan Mason</string>
    <string name="not_specified">Not Specified</string>
    <string name="step_bullet">\></string>
    <string name="ingredient_bullet">*</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="steps_title">Steps</string>
    <string name="description_title">Current Step</string>
    <string name="recipe_title">%1$s (Serves %2$d)</string>

    <!-- Widget -->
    <string name="widget_ingredients_caption">Ingredients</string>
    <string name="widget_ingredients_caption_with_recipe">Ingredients: %s</string>
    <string name="widget_ingredients_last_viewed_recipe">Ingredients of last viewed recipe to appear here...</string>

    <!-- Content descriptions. -->
    <string name="describe_video_player">Video of recipe step</string>
    <string name="describe_previous">Previous recipe step</string>
    <string name="describe_next">Next recipe step</string>

    <!-- Error messages. -->
    <string name="err_no_recipes">Recipes currently unavailable.</string>
</resources>
